--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,15 @@
 *.swp
 __pycache__
 
+CMakeFiles
+CMakeCache.txt
+*.cmake
+install_manifest.txt
+
 Debug
 Release
 *vcxproj*.user
+Makefile
+
+*.a
+
