Update to match datamap repo move.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,6 +27,6 @@ CSaru_Lib(1.4 "${src_files}" "${header_files}")
 set(CXX_STANDARD_REQUIRED true)
 set_property(TARGET ${PROJECT_NAME} PROPERTY CXX_STANDARD 11)
 
-CSaru_Depends("csaru-container-cpp")
+CSaru_Depends("csaru-datamap-cpp")
 CSaru_Depends("csaru-core-cpp")
 
